<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="edu.upb.certi.annoy_o_larm.RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/emailRegister"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/emailEditText"
        android:padding="8dp"
        android:hint="@string/emailExampleRegister"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/passwordRegister"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:padding="8dp"
        android:hint="@string/passwordExampleRegister"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/repeatPasswordRegister"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/passwordRepEditText"
        android:padding="8dp"
        android:hint="@string/passwordExampleRegister"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="18dp"
        android:text="@string/registerRegister"
        android:textSize="18sp" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        tools:visibility="visible" />
</LinearLayout>
